src/main.scss
@import "./styles/colors.scss";
@import "styles/fonts.scss";

html {
  margin: 0;
  padding: 0;
  height: 100.1%;
  width: 100%;
  position: fixed;
  overflow: hidden;
}

body {
  height: 100.1%;
  font-family: $primary_font;
  margin: 0;
  animation: fadeInAnimation ease 3s;
  -webkit-animation: fadeInAnimation ease 3s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

#root {
  height: 100.1%;
  width: 100%;
  margin: 0;
}

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

